# nautobot-component-tracking

./: .env.example  docker-compose.yml  pyproject.toml
nautobot_plugin/: __init__.py  admin.py  forms.py  models.py  navigation.py  urls.py  views.py
nautobot_plugin/api/: serializers.py  urls.py  views.py
nautobot_plugin/migrations/: 0001_initial.py
nautobot_plugin/templates/nautobot_plugin/: add_component.html  components.html
